# selena

./: .gitignore  README.md
compiler/: CMakeLists.txt  meson.build  plan.md
compiler/include/: ast.h  lexer.h  selena.h
compiler/include/lexer/: lexer.h  lexer_errors.h
compiler/include/utils/: allocation.h  cli_colors.h  exit_codes.h  input_args.h  msg_errors.h  run_flags.h
compiler/lexer/: lexer.h
compiler/resources/: msg.h  msg.yaml  msg_resource.c  msg_resource.h
compiler/src/: ast.cpp  lexer.cpp  main.c  selena.c
compiler/src/lexer/: lexer.c
compiler/src/resources/: msg_recource.c
compiler/src/utils/: allocation.c  cli_colors.c  input_args.c  msg_errors.c
examples/basic/: syntax.sl
examples/ext/: optimizise_project1.sl
scripts/: generate_messages.jl  generate_messages.py
